--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/styled-engine-sc": "^5.8.0",
     "@mui/x-date-pickers": "^5.0.0-alpha.6",
     "@reduxjs/toolkit": "^1.8.2",
+    "axios": "^0.27.2",
     "date-fns": "^2.28.0",
     "notistack": "^2.0.5",
     "react": "^18.0.0",
